# rust-uploader-sql

./: Cargo.toml  README.md  settings.json
.github/workflows/: build.yml
src/: main.rs
